{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 16,
  "lineage": "20079028-a7c1-59f7-5e2f-21daa6d606a3",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd2b85ee2b4dc969",
            "arn": "arn:aws:ec2:eu-north-1:773750396979:instance/i-01dc2bde1161b4b6d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01dc2bde1161b4b6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ccec51c7e58cf6d0"
              }
            ],
            "primary_network_interface_id": "eni-0ccec51c7e58cf6d0",
            "private_dns": "ip-172-31-18-73.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.73",
            "public_dns": "ec2-13-60-244-52.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.244.52",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b243ebcdd74848f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c866251b93da9b1e",
            "tags": {
              "Name": "db_server"
            },
            "tags_all": {
              "Name": "db_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b25bcd695f4f59e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "i-01dc2bde1161b4b6d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.EC2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:773750396979:security-group/sg-03b25bcd695f4f59e",
            "description": "ec2-sg",
            "egress": [],
            "id": "sg-03b25bcd695f4f59e",
            "ingress": [],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "773750396979",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e443a508c15baa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "sg-03b25bcd695f4f59e",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:773750396979:security-group-rule/sgr-0fd7e9f0c6838d55a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fd7e9f0c6838d55a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-03b25bcd695f4f59e",
            "security_group_rule_id": "sgr-0fd7e9f0c6838d55a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "sgr-0fd7e9f0c6838d55a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.EC2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:773750396979:security-group-rule/sgr-0774de6a4a932455e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0774de6a4a932455e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-03b25bcd695f4f59e",
            "security_group_rule_id": "sgr-0774de6a4a932455e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "sgr-0774de6a4a932455e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.EC2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:773750396979:security-group/sg-0b414a6652a077b70",
            "description": "rds-sg",
            "egress": [],
            "id": "sg-0b414a6652a077b70",
            "ingress": [],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "773750396979",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e443a508c15baa1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "sg-0b414a6652a077b70",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2085104877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0b414a6652a077b70",
            "security_group_rule_id": "sgr-06983c0d1bc99f6a8",
            "self": false,
            "source_security_group_id": "sg-03b25bcd695f4f59e",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.EC2.aws_security_group.ec2_sg",
            "module.rds.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:773750396979:security-group-rule/sgr-0527df70f22ab18f6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0527df70f22ab18f6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0b414a6652a077b70",
            "security_group_rule_id": "sgr-0527df70f22ab18f6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "773750396979",
            "id": "sgr-0527df70f22ab18f6",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.rds.aws_security_group.rds_sg"
          ]
        }
      ]
    }
  ]
}